# drf_project

./: .gitignore  pyproject.toml
apps/: admin.py  serializers.py  urls.py  views.py
apps/fixtures/: categories.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  addresses.py  base.py  orders.py  products.py  shops.py  users.py
root/: settings.py  urls.py
